--- a/index.html
+++ b/index.html
@@ -8,81 +8,119 @@
         FCC: Product Landing Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
-
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css"
-        integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+        integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 
 <body>
-    <header  id="header">
+    <header id="header">
         <img src="https://s3.amazonaws.com/freecodecamp/original_trombones.png" alt="" id="header-img">
-
         <nav id="nav-bar">
-            <a href="#features" class="nav-link">Features
-
-            </a>
+            <a href="#features" class="nav-link">Features</a>
             <a href="#Howitworks" class="nav-link"> How It Works</a>
             <a href="#pricing" class="nav-link">Pricing</a>
         </nav>
     </header>
     <h2>Handcrafted, home-made masterpieces</h2>
-    <form action=" https://www.freecodecamp.com/email-submit" id="form">
-        <input type="email" id="email" placeholder="Enter your email address">
-        <input type="submit" value="Get Started" id="submit">
+    <form action="https://www.freecodecamp.com/email-submit" id="form">
+        <input type="email" id="email" placeholder="Enter your email address" name="email" required>
+        <input type="submit" value="Get Started" id="submit" name="submit">
     </form>
     <section id="features">
-        <div class="icon">
-            <i class="fas fa-fire"></i>
+        <div class="box">
+            <div class="icon">
+                <i class="fas fa-fire"></i>
+            </div>
+            <div class="desc">
+                <h3>Premium Materials</h3>
+                <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of
+                    your purchase.</p>
+            </div>
         </div>
-        <div class="desc">
-
-            <h3>
-                Premium Materials</h3>
-            <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your
-                purchase.</p>
+        <div class="box">
+            <div class="icon">
+                <i class="fas fa-fire"></i>
+            </div>
+            <div class="desc">
+                <h3>Fast Shipping</h3>
+                <p>We make sure you recieve your trombone as soon as we have finished making it. <br>We also provide
+                    free returns if you are not satisfied.</p>
+            </div>
         </div>
-
-        <div class="icon">
-            <i class="fas fa-truck"></i>
-        </div>
-        <div class="desc">
-
-            <h3>
-
-                Fast Shipping</h3>
-            <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free
-                returns if you are not satisfied.</p>
-        </div>
-
-
-        <div class="icon">
-            <i class="fas fa-battery-full"></i>
-        </div>
-        <div class="desc">
-
-            <h3>Quality Assurance</h3>
-            <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the
-                pitch of your instrument.</p>
+        <div class="box">
+            <div class="icon">
+                <i class="fas fa-fire"></i>
+            </div>
+            <div class="desc">
+                <h3>Quality Assurance</h3>
+                <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test
+                    the pitch of your instrument.</p>
+            </div>
         </div>
     </section>
     <section id="Howitworks">
-        <h1>Hello</h1>
+        <iframe id="video" height="315"
+            src="https://www.youtube-nocookie.com/embed/y8Yv4pnO7qc?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0"
+            allowfullscreen></iframe>
 
     </section>
     <section id="pricing">
-        <h1>Hello</h1>
+        <div class="card">
+            <div class="one">
+                <h3>TENOR TROMBONE</h3>
+            </div>
+            <div class="two">
 
+                <h3>$600</h3>
+                <p>Lorem ipsum.<br><br>
+                    Lorem ipsum.<br><br>
+                    Lorem ipsum dolor<br><br>
+                    Lorem ipsum.<br><br>
+                </p>
+                <button class="btn">SELECT</button>
+            </div>
+
+        </div>
+        <div class="card">
+            <div class="one">
+                <h3>BASS TROMBONE</h3>
+            </div>
+            <div class="two">
+
+                <h3>$900</h3>
+                <p>Lorem ipsum.<br><br>
+                    Lorem ipsum.<br><br>
+                    Lorem ipsum dolor<br><br>
+                    Lorem ipsum.<br><br>
+                </p>
+                <button class="btn">SELECT</button>
+            </div>
+
+        </div>
+        <div class="card">
+            <div class="one">
+                <h3>VALVE TROMBONE</h3>
+            </div>
+            <div class="two">
+
+                <h3>$1200</h3>
+                <p>Lorem ipsum.<br><br>
+                    Lorem ipsum.<br><br>
+                    Lorem ipsum dolor<br><br>
+                    Lorem ipsum.<br><br>
+                </p>
+                <button class="btn">SELECT</button>
+            </div>
+
+        </div>
     </section>
-
-    <footer><div>
-
-        <div id="foot">Privacy</div>
-        <div id="foot">Terms</div>
-        <div id="foot">Contact</div>
-   
-
-        <div id="copy">Copyright 2021, Original Trombones</div>
-    </div>
+    <footer>
+        <div>
+            <div id="foot">Privacy</div>
+            <div id="foot">Terms</div>
+            <div id="foot">Contact</div>
+            <div id="copy">Copyright 2021, Original Trombones</div>
+        </div>
     </footer>
 </body>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
